--- a/Interface.html
+++ b/Interface.html
@@ -25,17 +25,18 @@
                 <td>
                     <select>
                         <option value="">Select Grade</option>
+                        <option value="4.0">A+ (4.0)</option>
                         <option value="4.0">A (4.0)</option>
-                        <option value="4.0">A- (4.0)</option>
-                        <option value="3.7">B+ (3.7)</option>
-                        <option value="3.3">B (3.3)</option>
-                        <option value="3.0">B- (3.0)</option>
-                        <option value="2.7">C+ (2.7)</option>
-                        <option value="2.3">C (2.3)</option>
-                        <option value="2.0">C- (2.0)</option>
-                        <option value="1.7">D+ (1.7)</option>
-                        <option value="1.3">D (1.3)</option>
-                        <option value="0.0">F (0.0)</option>
+                        <option value="3.7">A- (3.7)</option>
+                        <option value="3.3">B+ (3.3)</option>
+                        <option value="3.0">B (3.0)</option>
+                        <option value="2.7">B- (2.7)</option>
+                        <option value="2.3">C+ (2.3)</option>
+                        <option value="2.0">C (2.0)</option>
+                        <option value="1.7">C- (1.7)</option>
+                        <option value="1.3">D+ (1.3)</option>
+                        <option value="1.0">D (1.0)</option>
+                        <option value="0.0">E (0.0)</option>
                     </select>
                 </td>
             </tr>
@@ -43,5 +44,6 @@
     </table>
 
     <button onclick="addModule()">+ Add Module</button>
+    <div id="gpaResult"></div>
 </body>
 </html>
